[package]
authors = ['Kaichao']
description = 'A pallet to demonstrate Substrate benchmark'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-benchmark-demo'
repository = 'https://github.com/kaichaosun/play-substrate/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
frame-benchmarking = { default-features = false, version = '2.0.0', optional = true }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std'
]
runtime-benchmarks = ["frame-benchmarking"]
