[package]
authors = ['Kaichao <kaichaosuna@gmail.com>']
description = 'A pallet to show different data type of runtime storage.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-data-type'
repository = 'https://github.com/kaichaosun/play-substrate'
version = '4.0.0-dev'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.10.0" }
log = { version = "0.4.14", default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.8.0", optional = true }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }

[dev-dependencies]
sp-io = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ['frame-support/try-runtime']
