[package]
authors = ['Kaichao <kaichaosuna@gmail.com>']
description = 'A pallet to demo genesis config.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-genesis-config'
repository = 'https://github.com/kaichaosun/play-substrate/'
version = '4.0.0-dev'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "2.0.0" }
scale-info = { default-features = false, features = ['derive'], version = '2.10.0' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", version = '4.0.0-dev' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
	'sp-std/std',
	'scale-info/std'
]
