[package]
authors = ['Anonymous']
description = 'FRAME pallet offchain worker send unsigned transaction'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-ocw-unsigned'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-rc1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.lite-json]
default-features = false
version = "0.1"

[dependencies.serde]
version = "1.0.101"
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc1'
version = '2.0.0-rc1'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc1'
version = '2.0.0-rc1'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc1'
version = '2.0.0-rc1'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc1'
version = '2.0.0-rc1'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc1'
version = '2.0.0-rc1'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc1'
version = '2.0.0-rc1'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'lite-json/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]
