[package]
name = 'pallet-poe'
version = '4.0.0-dev'
description = 'FRAME proof of existence pallet'
authors = ['Kaichao Sun <kaichaosuna@gmail.com>']
homepage = 'https://whisperd.tech'
edition = '2021'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/play-substrate/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.25", version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.25", version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.25", version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '1.0' }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.25", version = '4.0.0-dev' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.25", version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.25", version = '4.0.0-dev' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
