[package]
name = 'pallet-poe'
version = '4.0.0-dev'
description = 'FRAME proof of existence pallet'
authors = ['Kaichao Sun <kaichaosuna@gmail.com>']
homepage = 'https://whisperd.tech'
edition = '2021'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/play-substrate/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.10.0" }

sp-std = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }

frame-support = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.8.0", optional = true }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = "polkadot-v1.8.0" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-std/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ['frame-support/try-runtime']
